<resources>
    <string name="app_name">SinoDAM</string>
    <string name="add">Añadir</string>
    <string name="buscar">Buscar</string>
    <string name="salir">Salir</string>
    <string name="pjsl">© 2018 Pedro José Suárez Lantigua</string>
    <string name="buscar_sino">Buscar Sinónimo</string>
    <string name="nueva_palabra">Nueva Palabra</string>
    <string name="inserte_una_palabra">Inserte una palabra nueva:</string>
    <string name="inserte_un_sin_nimo">Inserte un sinónimo</string>
    <string name="inserte_otro_sin_nimo">Inserte otro sinónimo</string>
    <string name="cancelar">Cancelar</string>
    <string name="sin_nimo_1">Sinónimo 1</string>
    <string name="sin_nimo_2">Sinónimo 2</string>
    <string name="error_sd">SD no disponible</string>
    <string name="permiso_denegado">Permiso de escritura denegado en tarjeta SD</string>
    <string name="error_sd_denegado">Acceso a la tarjeta SD denegado</string>
    <string name="int_palabra">Introduzca una palabra</string>
</resources>
