<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedro.sinodam.MainActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center|top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kkimg"/>

   <LinearLayout
       android:layout_gravity="center"
       android:layout_marginTop="90dp"
       android:gravity="center_horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add"
           android:onClick="insertarPalabra"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/buscar"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:onClick="buscarPalabra"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/salir"
           android:onClick="salirAPP"/>
   </LinearLayout>

    <TextView
        android:textColor="#000"
        android:layout_margin="10dp"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pjsl"/>
</FrameLayout>
